--- a/Profile_Settings_w10.INI
+++ b/Profile_Settings_w10.INI
@@ -32,12 +32,6 @@ Product  = Microsoft Office 11.0
 #Mail Profile and Signatures - Mail Signatures
 <AppData>\Microsoft\Signatures
 
-#FileZilla
-<AppData>\Filezilla
-
-#ImageGlass
-<AppData>\ImageGlass
-
 #Security - Certificates
 #<AppData>\Microsoft\SystemCertificates
 
@@ -61,6 +55,10 @@ Product  = Microsoft Office 11.0
 <AppData>\SoftGrid Client
 <UserProfile>\Appdata\Local\SoftGrid Client
 
+#PayeBasicTools - HW
+#<AppData>\HMRC\payetools-rti
+
+
 #Office 2013
 <AppData>\Microsoft\Office
 <AppData>\Microsoft\Proof
@@ -68,9 +66,9 @@ Product  = Microsoft Office 11.0
 <AppData>\Microsoft\UProof
 <AppData>\Microsoft\OIS
 <AppData>\Microsoft\Outlook
-<AppData>\Microsoft\Templates
+#<AppData>\Microsoft\Templates
 #<AppData>\Microsoft\PowerPoint
-#<AppData>\Microsoft\Excel
+<AppData>\Microsoft\Excel
 #<AppData>\Microsoft\Word
 <AppData>\Microsoft\AddIns
 <AppData>\Microsoft\Graph
@@ -81,13 +79,23 @@ Product  = Microsoft Office 11.0
 <AppData>\Microsoft\Stationery
 <AppData>\Microsoft\Protect
 <AppData>\Microsoft\Communicator
-<UserProfile>\Appdata\Local\Microsoft\Communicator
+#<UserProfile>\Appdata\Local\Microsoft\Communicator
+<AppData>\PS enterprise Client 4.3.0
+#SC disabled the below 15 june 2018 troubleshooting for profile issues
+#<UserProfile>\AppData\Local\Microsoft\Office\16.0\Lync
+
+#Excel Quick Access Toolbar
+<UserProfile>\AppData\Local\Microsoft\Office
 
 #Outlook Mail Profile
-<UserProfile>\AppData\Local\Microsoft\Outlook
+#<UserProfile>\AppData\Local\Microsoft\Outlook
 
 #Adobe
 <AppData>\Adobe
+
+# Google Chrome
+<UserProfile>\AppData\Local\Google\Chrome\User Data\Default\Extensions
+<UserProfile>\AppData\Local\Google\Chrome\User Data\Default\Extension State
 
 #FireFox
 <AppData>\Mozilla\Firefox
@@ -96,17 +104,35 @@ Product  = Microsoft Office 11.0
 <UserProfile>\AppData\LocalLow\Sun\Java\Deployment\ext
 <UserProfile>\AppData\LocalLow\Sun\Java\Deployment\Security
 
-#Fis
-<AppData>\fisauth
+#Serif
+<AppData>\Serif\PagePlus\10.0\Users
 
-#Netmail
-#<AppData>\Roaming\Messaging Architects\NetmailArchiveOutlookAddIn
+#Matrix
+<UserProfile>\AppData\Local\Microsoft_Corporation
 
 
+#Citrix Appcenter
+<AppData>\Roaming\Microsoft\MMC
+
+#SystemsLink
+<UserProfile>\AppData\Local\SystemsLink
+
+#rdtabs
+<UserProfile>\AppData\Local\Avian_Waves
+
+#CentraStage
+<UserProfile>\AppData\Local\CentraStage
+
+#RightSlide
+<AppData>\Perivan
+
+
+#LexisDraft Settings
+<UserProfile>\AppData\Roaming\Microsystems
 
 [IncludeIndividualFiles]
 #Internet Explorer 10+ Cookies and History
-<UserProfile>\AppData\Local\Microsoft\Windows\WebCache.zip
+#<UserProfile>\AppData\Local\Microsoft\Windows\WebCache.zip
 
 #Windows Settings
 <AppData>\Microsoft\UProof\CUSTOM.DIC
@@ -116,10 +142,18 @@ Product  = Microsoft Office 11.0
 #Java
 <UserProfile>\AppData\LocalLow\Sun\Java\Deployment\deployment.properties
 
+#Mimecast
+<AppData>\Mimecast
+
 #Google Chrome
 <UserProfile>\AppData\Local\Google\Chrome\User Data\First Run
+<UserProfile>\AppData\Local\Google\Chrome\User Data\Local State
 <UserProfile>\AppData\Local\Google\Chrome\User Data\Default\bookmarks
+<UserProfile>\AppData\Local\Google\Chrome\User Data\Default\Current Tabs
+<UserProfile>\AppData\Local\Google\Chrome\User Data\Default\Extension Cookies
+<UserProfile>\AppData\Local\Google\Chrome\User Data\Default\Shortcuts
 <UserProfile>\AppData\Local\Google\Chrome\User Data\Default\login data
+<UserProfile>\AppData\Local\Google\Chrome\User Data\Default\Login Data-journal
 <UserProfile>\AppData\Local\Google\Chrome\User Data\Default\History
 <UserProfile>\AppData\Local\Google\Chrome\User Data\Default\Preferences
 <UserProfile>\AppData\Local\Google\Chrome\User Data\Default\Current Session
@@ -132,6 +166,9 @@ Product  = Microsoft Office 11.0
 <UserProfile>\AppData\Local\Google\Chrome\User Data\Default\Last Session
 <UserProfile>\AppData\Local\Google\Chrome\User Data\Default\Last Tabs
 <UserProfile>\AppData\Local\Google\Chrome\User Data\Default\Origin Bound Certs
+<UserProfile>\AppData\Local\Google\Chrome\User Data\Default\Top Sites
+<UserProfile>\AppData\Local\Google\Chrome\User Data\Default\Web Data
+<UserProfile>\AppData\Local\Google\Chrome\User Data\Default\Web Data-journal
 
 #Start Menu
 <AppData>\Microsoft\Windows\appsfolderlayout.bin
@@ -155,8 +192,8 @@ HKCU\Control Panel\Accessibility\StickyKeys
 HKCU\Control Panel\Accessibility\ToggleKeys
 HKCU\Control Panel\Accessibility\MouseKeys
 HKCU\Control Panel\Accessibility\TimeOut
-HKCU\Software\Microsoft\Windows NT\CurrentVersion\Accessibility
-HKCU\Software\Microsoft\Windows NT\CurrentVersion\AccessibilityTemp
+#HKCU\Software\Microsoft\Windows NT\CurrentVersion\Accessibility
+#HKCU\Software\Microsoft\Windows NT\CurrentVersion\AccessibilityTemp
 
 #Accessibility - Audio and Sounds
 HKCU\Control Panel\Accessibility\AudioDescription
@@ -184,11 +221,16 @@ HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Modules\CommonPlaces
 
 #Explorer Settings - Mapped Network Drives
 HKCU\Network
+HKCU\SOFTWARE\Microsoft\Windows\CurrentVersion\Explorer\MountPoints2
+HKCU\SOFTWARE\Microsoft\Windows\CurrentVersion\Explorer\MountPoints2
+HKCU\SOFTWARE\Microsoft\Windows\CurrentVersion\Explorer\Map Network Drive MRU
+HKCU\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Network
+HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\UserAssist
 
 #Explorer Settings - Mapped Network Printers
-HKCU\Software\Microsoft\Windows NT\CurrentVersion\Devices
-HKCU\Software\Microsoft\Windows NT\CurrentVersion\Windows
-HKCU\Printers
+#HKCU\Software\Microsoft\Windows NT\CurrentVersion\Devices
+#HKCU\Software\Microsoft\Windows NT\CurrentVersion\Windows
+#HKCU\Printers
 
 #Explorer Settings - Network Location Shortcuts
 HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\PublishingWizard\AddNetworkPlace\AddNetPlace
@@ -202,7 +244,9 @@ HKCU\Software\Microsoft\Windows\CurrentVersion\Internet Settings\Zones
 
 #Internet Explorer 11 Cookies and History - IE Setttings
 HKCU\Software\Microsoft\Internet Explorer\DOMStorage
-HKCU\Software\Microsoft\Windows\CurrentVersion\Internet Settings\5.0\Cache\Extensible Cache
+
+#Internet Explorer 11 Zoom Settings
+HKCU\Software\Microsoft\Internet Explorer\Zoom
 
 #Input Devices - Keyboard
 HKCU\Control Panel\Keyboard
@@ -216,7 +260,7 @@ HKCU\Software\Microsoft\Windows NT\CurrentVersion\Windows Messaging Subsystem
 HKCU\Software\Microsoft\Exchange
 
 #Region and Language - Input Language
-HKCU\Keyboard Layout
+#HKCU\Keyboard Layout
 
 #Region and Language - Language Bar
 HKCU\Software\Microsoft\CTF
@@ -263,7 +307,7 @@ HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Streams\Desktop
 HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\CLSID
 
 #Windows Appearance - Themes
-HKCU\Software\Microsoft\Windows\CurrentVersion\ThemeManager
+#HKCU\Software\Microsoft\Windows\CurrentVersion\ThemeManager
 HKCU\Software\Microsoft\Windows\CurrentVersion\Themes\DefaultVisualStyleOff
 HKCU\Software\Microsoft\Windows\CurrentVersion\Themes\DefaultVisualStyleOn
 HKCU\Software\Microsoft\Windows\DWM
@@ -296,49 +340,39 @@ HKCU\Software\Microsoft\Windows\CurrentVersion\Policies\System\Wallpaper
 
 #### Application Settings #####
 
-#Citrix
-HKCU\Software\Citrix
-
-#Adobe
-HKCU\Software\Adobe
-HKCU\Software\Mozilla\Firefox
-
 #Office 2013
 # These keys contain common Office Settings
 HKCU\Software\Microsoft\Shared
 HKCU\Software\Microsoft\Shared Tools
 HKCU\Software\Microsoft\Office
-HKCU\Software\Microsoft\Office\15.0\Common
-HKCU\Software\Microsoft\Office\15.0\MS
-HKCU\Software\Microsoft\Office\15.0\Registration
-HKCU\Software\Microsoft\Office\15.0\InfoPath
+HKCU\Software\Microsoft\Office\16.0\Common
+HKCU\Software\Microsoft\Office\16.0\MS
+HKCU\Software\Microsoft\Office\16.0\Registration
+HKCU\Software\Microsoft\Office\16.0\InfoPath
 HKCU\Software\Microsoft\Shared Tools\Proofing Tools
 
 #Word
-HKCU\Software\Microsoft\Office\15.0\Word
+HKCU\Software\Microsoft\Office\16.0\Word
 HKCU\Software\Microsoft\Office\Word
 
 #Outlook profile
-HKCU\Software\Microsoft\Office\15.0\Outlook
+HKCU\Software\Microsoft\Office\16.0\Outlook
 HKCU\Software\Microsoft\Office\Outlook
 HKCU\Software\Microsoft\Windows NT\CurrentVersion\Windows Messaging Subsystem
 HKCU\Software\Microsoft\Windows Messaging Subsystem\Profiles\Outlook
 
-#FIS
-HKCU\SOFTWARE\b5a7235a-b250-50fe-827b-0bcf1bbfb6ab
-
 #Lync
+HKCU\Software\Microsoft\Office\16.0\Lync
 HKCU\Software\Microsoft\Communicator
+HKCU\Software\Microsoft\UCCPlatform
 
-#VMWare
-HKCU\Software\VMware
 
 #Excel
-HKCU\Software\Microsoft\Office\15.0\Excel
+HKCU\Software\Microsoft\Office\16.0\Excel
 HKCU\Software\Microsoft\Office\Excel
 
 #PowerPnt
-HKCU\Software\Microsoft\Office\15.0\PowerPoint
+HKCU\Software\Microsoft\Office\16.0\PowerPoint
 HKCU\Software\Microsoft\Office\PowerPoint
 
 #Printers
@@ -346,6 +380,35 @@ HKCU\Software\Microsoft\Office\PowerPoint
 #HKCU\Software\Microsoft\Windows NT\CurrentVersion\Devices
 #HKCU\Software\Microsoft\Windows NT\CurrentVersion\PrinterPorts
 #HKCU\Software\Microsoft\Windows NT\CurrentVersion\Windows
+
+#Citrix
+HKCU\Software\Citrix
+
+#Chrome
+HKCU\Software\Google
+
+#Adobe
+HKCU\Software\Adobe
+
+#Firefox
+HKCU\Software\Mozilla\Firefox
+
+#PS Enterprise
+HKCU\Software\PS enterprise Client 4.3.0
+
+#Dameware
+HKCU\Software\Dameware Development\NT Utilities
+HKCU\Software\Dameware Development\Mini Remote Control
+
+#Citrix
+HKCU\Software\Citrix
+
+#Serif
+HKCU\Software\Serif\PagePlus\10.0\Misc
+
+#Telephonetics
+HKCU\Software\Telephonetics\AgentConsole
+
 
 [IncludeIndividualRegistryValues]
 
@@ -444,6 +507,7 @@ HKCU\SOFTWARE\Microsoft\Windows\CurrentVersion\Notifications\Settings\NOC_GLOBAL
 HKCU\SOFTWARE\Microsoft\Windows\CurrentVersion\Notifications\Settings\NOC_GLOBAL_SETTING_SUPRESS_TOASTS_WHILE_DUPLICATING
 HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\StuckRects3\Settings
 HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced\TaskbarGlomming
+HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced\TaskbarGlomLevel
 HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced\TaskbarSizeMove
 HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced\TaskbarSmallIcons
 HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\EnableAutoTray
@@ -531,55 +595,35 @@ HKCU\SOFTWARE\Microsoft\Windows\CurrentVersion\Explorer\Wallpapers\BackgroundTyp
 HKCU\Software\Classes\Local Settings\Software\Microsoft\Windows\Shell\BagMRU
 HKCU\Software\Classes\Local Settings\Software\Microsoft\Windows\Shell\Bags
 
-#Windows Explorer custom settings
-HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced\AutoCheckSelect
-HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced\Filter
-HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced\Hidden
-HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced\HideFileExt
-HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced\HideIcons
-HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced\IconsOnly
-HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced\MapNetDrvBrn
-HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced\SeparateProcess
-HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced\ServerAdminIO
-HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced\ShowStatusBar
-HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced\ShowSuperHidden
-HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced\TaskbarAnimations
-
-
 [ExcludeRegistryTrees]
-#HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Shell Folders	
-HKCU\software\Policies	
-HKCU\Software\Microsoft\SystemCertificates	
-HKCU\Software\Microsoft\AppV	
-HKCU\Software\Microsoft\Windows NT\CurrentVersion\Network	
-HKCU\Software\Microsoft\Windows\ShellNoRoam	
-HKCU\Software\Microsoft\Windows\CurrentVersion\Policies	
-HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\User Shell Folders	
 HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Shell Folders
+HKCU\software\Policies
+#HKCU\Software\Microsoft\SystemCertificates
+HKCU\Software\Microsoft\AppV
+#HKCU\Software\Microsoft\Windows NT\CurrentVersion\Network
+HKCU\Software\Microsoft\Windows\ShellNoRoam
+HKCU\Software\Microsoft\Windows\CurrentVersion\Policies
+HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\User Shell Folders
+
+#Chrome
+HKCU\Software\Google\Chrome\NativeMessagingHosts
 
 #Citrix
 HKCU\Software\Citrix\SessionSfr
+HKCU\Software\Citrix\GenericUSB
 
 #office 2013
-#HKCU\Software
-HKCU\Software\Microsoft\Office\15.0\Access\Resiliency\DocumentRecovery
-HKCU\Software\Microsoft\Office\15.0\PowerPoint\Resiliency\DocumentRecovery
-HKCU\Software\Microsoft\Office\15.0\Word\Resiliency\DocumentRecovery
-HKCU\Software\Microsoft\Office\15.0\Outlook\Resiliency\DocumentRecovery
-HKCU\Software\Microsoft\Office\15.0\Excel\Resiliency\DocumentRecovery
+HKCU\Software
+HKCU\Software\Microsoft\Office\16.0\Access\Resiliency\DocumentRecovery
+HKCU\Software\Microsoft\Office\16.0\PowerPoint\Resiliency\DocumentRecovery
+HKCU\Software\Microsoft\Office\16.0\Word\Resiliency\DocumentRecovery
+HKCU\Software\Microsoft\Office\16.0\Outlook\Resiliency\DocumentRecovery
+HKCU\Software\Microsoft\Office\16.0\Excel\Resiliency\DocumentRecovery
 
-[IncludeRegistryTrees]
-#HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced
-HKCU\SOFTWARE\Microsoft\Windows\CurrentVersion\Run
-#HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts
-#HKCU\Software\Microsoft\Windows\Shell\Associations
-HKCU\Software\Microsoft\Internet Explorer
-#Start Tiles
-#HKCU\Software\Microsoft\Windows\CurrentVersion\CloudStore
+[ExcludeIndividualRegistryValues]
 
-[IncludeFolderTrees]
-#Start Tiles
-#<UserProfile>\AppData\Local\Microsoft\Windows\CloudStore
-#<UserProfile>\AppData\Local\Microsoft\Windows\Caches
-#<UserProfile>\AppData\Local\Microsoft\Windows\Explorer
-#<UserProfile>\AppData\Local\TileDataLayer\Database
+#Internet Settings
+HKCU\Software\Microsoft\Windows\CurrentVersion\Internet Settings\EnableAutodial
+HKCU\Software\Microsoft\Office\14.0\Outlook\Options\Calendar\EnableDirectBooking
+HKCU\Software\Microsoft\Office\14.0\Word\Options\BackgroundPrint
+HKCU\Software\Microsoft\Windows\CurrentVersion\Internet Settings\WarnonZoneCrossing
